# MathisPhy-UQAC-3D

./: .gitignore  README.md  identification.txt
GameEngine/main/gameEngine/: CMakeLists.txt
GameEngine/main/gameEngine/include/: gameWorld.hpp  inputsManager.hpp  physicEngine.hpp  renderEngine.hpp
GameEngine/main/gameEngine/src/: gameWorld.cpp  inputsManager.cpp  main.cpp  physicEngine.cpp  renderEngine.cpp
GameEngine/main/opengl_wrapperlib/include/: openGlWrapper.hpp  shader.hpp
GameEngine/main/opengl_wrapperlib/src/: openGlWrapper.cpp  shader.cpp
GameEngine/main/physicslib/: CMakeLists.txt
GameEngine/main/physicslib/include/: matrix3.hpp  particle.hpp  quaternion.hpp  rigidBody.hpp
GameEngine/main/physicslib/include/collisions/: boxPrimitive.hpp  contact.hpp  octree.hpp  particleContact.hpp  particleContactResolver.hpp  planePrimitive.hpp  primitive.hpp
GameEngine/main/physicslib/include/forceGenerator/: RigidBodyDragForceGenerator.hpp  anchoredSpringForceGenerator.hpp  bungeeSpringForceGenerator.hpp  dragForceGenerator.hpp  forceRegister.hpp  gravityForceGenerator.hpp  particleBuoyancyForceGenerator.hpp  particleSpringForceGenerator.hpp  particleStiffSpringForceGenerator.hpp  rigidBodyForceGenerator.hpp  rigidBodyGravityForceGenerator.hpp  rigidBodySpringForceGenerator.hpp
GameEngine/main/physicslib/include/math/: matrix3.hpp  matrix34.hpp  quaternion.hpp  vector3.hpp
GameEngine/main/physicslib/src/: matrix3.cpp  particle.cpp  quaternion.cpp  rigidBody.cpp
GameEngine/resources/shaders/: particle.vs
(+14 files in other folders)
